ProcessBuilder is now being used instead of Runtime.exec(), which is the recommended way of starting a process by Sun. This could potentially solve some issues when starting the compiler from Robocode.